fix line breaks in history and missing whitespaces
add missing <br/> between text lines in history
add css `whitespace:pre-wrap` for <span> in text containers

--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -42,7 +42,7 @@ body {
         animation-timing-function: linear;
         animation-iteration-count: 1;
         animation-fill-mode: forwards;
-        
+
         &[fade-effect="crossfade"] {
             animation-name: crossfade;
         }
@@ -179,6 +179,7 @@ body {
         }
 
         span {
+            white-space: pre-wrap;
             overflow-wrap: break-word;
             position: relative;
         }
